# MakcuRelay

./: .gitignore  CMakeLists.txt  README.md  build_linux.sh  run_linux.sh  test_square.py
src/: MakcuConnection.cpp  MakcuConnection.h  main.cpp
